--- a/css/page-landing.css
+++ b/css/page-landing.css
@@ -10,29 +10,13 @@
 
 #container {
   margin: auto;
-  width: 90%;
+  width: min(90%, 112rem);
 }
 
 .location,
 h1,
 visit p {
   height: 16vh;
-}
-
-.visit a {
-  width: 8rem;
-  height: 8rem;
-  background-color: #ffb666;
-  border-radius: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 16vh auto auto auto;
-  transition: background 200ms;
-}
-
-.visit a:hover {
-    background: #96feff;
 }
 
 #logo {
@@ -45,6 +29,11 @@ visit p {
 
 main h1 {
   animation-delay: 150ms;
+  font-size: clamp(4rem, 8vw, 8.4rem);
+}
+
+.visit a:hover {
+  background: #96feff;
 }
 
 .visit p {
@@ -52,5 +41,65 @@ main h1 {
 }
 
 .visit a {
+  width: 8rem;
+  height: 8rem;
+  background-color: #ffb666;
+  border-radius: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 16vh auto auto auto;
+  transition: background 200ms;
   animation-delay: 250ms;
+}
+
+/* desktop version */
+
+@media (min-width: 760px) {
+  #container {
+    background: url("/images/bg.svg") no-repeat 80% / clamp(30rem, 54vw, 56rem);
+    padding: 5% 2%;
+  }
+
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .location,
+  h1,
+  .visit p {
+    height: initial;
+    text-align: initial;
+  }
+
+  .location {
+    text-align: right;
+    font-size: 2.4rem;
+    line-height: 1.5;
+  }
+
+  main h1 {
+    font-weight: bold;
+    line-height: 0.88;
+    margin: clamp(10%, 9vh, 12%) 0 4rem;
+    width: min(300px, 80%);
+  }
+
+  .visit {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .visit p {
+    font-size: 2.4rem;
+    line-height: 1.5;
+    width: clamp(20rem, 20vw, 30rem);
+  }
+
+  .visit a {
+    margin: initial;
+  }
 }
