--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,9 +9,9 @@
       rel="stylesheet"
     />
     <link rel="icon" href="/images/logo-icon.png" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/page-landing.css" />
-    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/page-landing.css" />
+    <link rel="stylesheet" href="css/animations.css" />
   </head>
   <body>
     <div id="page-landing">
@@ -37,7 +37,7 @@
           <p class="animate-up">
             Visite orfanatos e mude o dia de muitas crianças
           </p>
-          <a class="animate-up" href="orphanages.html"
+          <a class="animate-up" href="/orphanages"
             ><img
               title="Visite orfanatos"
               src="/images/arrow.svg"
