dia 5 - não finalizado

--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -38,7 +38,7 @@
 
     <div class="orphanages">
   {{#each orphanages}}
-    <span hidden
+    <span 
       data-id="{{this.id}}"
       data-name="{{this.name}}"
       data-lat="{{this.lat}}"
